week3-kubernetes-deployment/k8s-manifests/wallet-service/wallet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-service
  labels:
    app: wallet-service
spec:
  selector:
    app: wallet-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http
  type: ClusterIP
